Fixed layout issues and structure for mobile and desktop

--- a/FRONTEND/src/style.css
+++ b/FRONTEND/src/style.css
@@ -59,7 +59,7 @@ body {
     padding: 5px 12px;
     background-color: rgb(234, 234, 234);
     border-radius: 20px;
-    opacity: 0.7;
+    opacity: 0.8;
     white-space: nowrap;
     overflow: hidden;
     color: #764C7E;
